--- a/ecwid-shopping-cart/css/admin.css
+++ b/ecwid-shopping-cart/css/admin.css
@@ -177,17 +177,17 @@ body[class*="_page_ecwid"] .ecwid-message {
   letter-spacing: -0.22px;
 }
 
-.widget-top.ecwid-widget-highlighted {
+#available-widgets .widget-top.ecwid-widget-highlighted {
 	background: #1d7ac4;
 	color: white;
 	font-weight: normal;
 }
 
-.ecwid-widget .widget-top h4 {
+#available-widgets .ecwid-widget .widget-top h4 {
 	padding-left: 42px;
 }
 
-.ecwid-widget .widget-top h4:before {
+#available-widgets .ecwid-widget .widget-top h4:before {
 	font-size: 20px;
 	position: absolute;
 	top: 12px;
@@ -209,11 +209,11 @@ body[class*="_page_ecwid"] .ecwid-message {
 	color: #1d7ac4;
 	opacity: .5;
 }
-.ecwid-widget .widget-top:hover h4:before {
+#available-widgets .ecwid-widget .widget-top:hover h4:before {
 	opacity: 1;
 }
 
-.ecwid-widget .widget-top.ecwid-widget-highlighted h4:before {
+#available-widgets .ecwid-widget .widget-top.ecwid-widget-highlighted h4:before {
 	color: white;
 	opacity: 1;
 }
@@ -243,27 +243,30 @@ body[class*="_page_ecwid"] .ecwid-message {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.widget-top.ecwid-widget-badge h4:before {
-	content: "\e602";;
-}
-
-.widget-top.ecwid-widget-minicart h4:before,
-.widget-top.ecwid-widget-minicart_miniview h4:before {
-	content: "\e600";
-}
-
-.widget-top.ecwid-widget-vcategories h4:before {
-	content: "\e601";
-}
-
-.widget-top.ecwid-widget-categories h4:before {
-	content: "\e601";
-}
-
-.widget-top.ecwid-widget-search h4:before {
+#available-widgets .widget-top.ecwid-widget-badge h4:before {
 	content: "\e603";
 }
 
-.widget-top.ecwid-widget-storelink h4:before {
+#available-widgets .widget-top.ecwid-widget-minicart h4:before,
+#available-widgets .widget-top.ecwid-widget-minicart_miniview h4:before
+{
+	content: "\e601";
+}
+
+#available-widgets .widget-top.ecwid-widget-vcategories h4:before,
+#available-widgets .widget-top.ecwid-widget-categories h4:before
+{
+	content: "\e602";
+}
+
+#available-widgets .widget-top.ecwid-widget-search h4:before {
 	content: "\e604";
+}
+
+#available-widgets .widget-top.ecwid-widget-storelink h4:before {
+	content: "\e605";
+}
+
+#available-widgets .widget-top.ecwid-widget-recentlyviewed h4:before {
+	content: "\e600";
 }
