--- a/ecwid-shopping-cart/css/settings.css
+++ b/ecwid-shopping-cart/css/settings.css
@@ -669,7 +669,7 @@ display: none;
 }
 
 .ecwid-popup h3 span.close:before {
-	content: "X";
+	content: "\e606";
 	font-family: ecwid-icons;
 	font-size: 36px;
 }
