--- a/ecwid-shopping-cart/css/settings.css
+++ b/ecwid-shopping-cart/css/settings.css
@@ -282,12 +282,14 @@ display: none;
 	margin-bottom: 0px;
 }
 
-.ecwid-settings.advanced-settings input,
+.ecwid-settings.advanced-settings .pure-control-group input:not([type=checkbox]),
 .ecwid-settings.advanced-settings select
 {
-	width: 160px;
-	height: 25px;
+	width: 200px;
+	height: 30px;
 	margin-right: 15px;
+	font-size: 13px;
+	border-color: #cacaca;
 }
 
 .ecwid-settings.advanced-settings .note {
