additional tweaks for evolve

--- a/ecwid-shopping-cart/css/themes/evolve.css
+++ b/ecwid-shopping-cart/css/themes/evolve.css
@@ -1,9 +1,13 @@
 .ecwid-shopping-cart-product-browser table,
-.ecwid-shopping-cart-categories table {
+.ecwid-shopping-cart-categories table,
+.ecwid-popup table,
+.ecwid-MessageBox table {
 	border: 0px none !important;
 }
 
-.ecwid-shopping-cart-product-browser button {
+.ecwid-shopping-cart-product-browser button,
+.ecwid-popup button,
+.ecwid-MessageBox button {
 	color: inherit !important;
 }
 
