--- a/ecwid-shopping-cart/css/settings.css
+++ b/ecwid-shopping-cart/css/settings.css
@@ -319,6 +319,7 @@ display: none;
 .ecwid-admin .box {
 	position: relative;
 	margin-top: 25px;
+	padding: 0 15px;
 
 	border: 1px solid #E5E5E5;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
@@ -356,6 +357,7 @@ display: none;
 
 .ecwid-admin .box .head {
 	text-align: left;
+	margin-bottom: 20px;
 }
 
 .ecwid-admin .head svg {
@@ -392,9 +394,13 @@ display: none;
 .ecwid-connect .box .connect-button {
 	margin-top: 8px;
 }
+.ecwid-connect .where-to-find-store-id {
+	margin-top: 25px;
+	margin-bottom: 0;
+}
 
 .ecwid-connect .box .note {
-	margin-top: 15px;
+	margin-top: 6px;
 	max-width: 760px;
 }
 
@@ -413,6 +419,7 @@ display: none;
 	padding: 14px 40px;
 	border: 0px none;
 	border-radius: 4px;
+	width: 180px;
 
 	background: #59bb00;
 	color: white;
@@ -431,10 +438,10 @@ display: none;
 .ecwid-connect .box .note {
 	color: #A0A0A0;
 	line-height: 18px;
+	max-width: 400px;
 }
 
 .ecwid-connect .box .note.initial {
-	max-width: 250px;
 }
 
 .ecwid-connect .box .note.auth-error {
@@ -455,11 +462,12 @@ display: none;
 
 .ecwid-connect #ecwid-store-id {
 	line-height: 38px;
-	width: 224px;
+	width: 260px;
 	border-radius: 4px;
 	font-size: 16px;
 	font-weight: lighter;
 	padding-left: 10px;
+	font-family: 'Open Sans';
 }
 
 .ecwid-connect .box .create-account-link a {
