APPS-431 max-width for search

--- a/ecwid-shopping-cart/css/frontend.css
+++ b/ecwid-shopping-cart/css/frontend.css
@@ -7,3 +7,7 @@ html#ecwid_html body#ecwid_body .ecwid.ecwid-SingleProduct a ,
 	text-decoration: none;
 	color: #000000;
 }
+
+html#ecwid_html body#ecwid_body .ecwid-SearchPanel input {
+	max-width: 300px;
+}
