--- a/ecwid-shopping-cart/css/frontend.css
+++ b/ecwid-shopping-cart/css/frontend.css
@@ -11,3 +11,8 @@ html#ecwid_html body#ecwid_body .ecwid.ecwid-SingleProduct a ,
 html#ecwid_html body#ecwid_body .ecwid-SearchPanel input {
 	max-width: 300px;
 }
+
+.ecwid-shopping-cart-categories #horizontal-menu {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
